--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.1.0",
     "@capacitor/core": "4.1.0",
+    "@capacitor/filesystem": "^4.1.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/preferences": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
+    "@ionic/vue": "^6.2.5",
+    "@ionic/vue-router": "^6.2.5",
+    "apexcharts": "^3.35.5",
     "core-js": "^3.6.5",
+    "swiper": "^8.3.2",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@capacitor/cli": "4.1.0",
